--- a/src/main/resources/ui_en.properties
+++ b/src/main/resources/ui_en.properties
@@ -1,4 +1,12 @@
-title = Max Power Text Editor
+title = Text Editor
 open = Open...
 save = Save...
-compile = Compile...
+compile = Compile and run...
+search = Search...
+terminal = Terminal
+exit = Exit
+new = New
+settings = Settings...
+file = File
+run = Run
+edit = Edit
