--- a/src/main/resources/ui_fi.properties
+++ b/src/main/resources/ui_fi.properties
@@ -1,4 +1,12 @@
-title = Max Power Tekstieditori
+title = Tekstieditori
 open = Avaa...
 save = Tallenna...
-compile = Käännä...
+compile = Käännä ja aja...
+search = Etsi...
+terminal = Komentorivi
+exit = Sulje
+new = Uusi
+settings = Asetukset...
+file = Tiedosto
+run = Aja
+edit = Muokkaa
