preferences feature almost ready.

--- a/src/main/resources/ui_en.properties
+++ b/src/main/resources/ui_en.properties
@@ -3,7 +3,7 @@ open = Open...
 save = Save...
 compile = Compile and run...
 search = Search...
-terminal = Terminal
+terminal = Output
 exit = Exit
 new = New
 settings = Settings...
