--- a/src/main/resources/ui_fi.properties
+++ b/src/main/resources/ui_fi.properties
@@ -3,7 +3,7 @@ open = Avaa...
 save = Tallenna...
 compile = Käännä ja aja...
 search = Etsi...
-terminal = Komentorivi
+terminal = Tuloste
 exit = Sulje
 new = Uusi
 settings = Asetukset...
