tabs vs spaces preferences

--- a/src/main/resources/ui_fi.properties
+++ b/src/main/resources/ui_fi.properties
@@ -16,3 +16,6 @@ new = uusi
 about = Tietoja
 aboutApp = Tietoja sovelluksesta...
 cut = Leikkaa
+coder = Jussi Pohjolainen, 2020
+tab = Tab
+spaces = Välilyönnit (4)
