new file handler.

--- a/src/main/resources/ui_en.properties
+++ b/src/main/resources/ui_en.properties
@@ -1,12 +1,13 @@
 title = Text Editor
-open = Open...
-save = Save...
-compile = Compile and run...
-search = Search...
+open = Open…
+saveas = Save As…
+save = Save
+compile = Compile and run…
+search = Search…
 terminal = Output
 exit = Exit
 new = New
-settings = Settings...
+settings = Settings…
 file = File
 run = Run
 edit = Edit
@@ -14,7 +15,7 @@ copy = Copy
 paste = Paste
 new = New
 about = About
-aboutApp = About App...
+aboutApp = About App…
 cut = Cut
 coder = Jussi Pohjolainen, 2020
 tab = Tab
