--- a/src/main/resources/ui_fi.properties
+++ b/src/main/resources/ui_fi.properties
@@ -1,12 +1,13 @@
 title = Tekstieditori
-open = Avaa...
-save = Tallenna...
-compile = Käännä ja aja...
-search = Etsi...
+open = Avaa…
+saveas = Tallenna nimellä…
+save = Tallenna
+compile = Käännä ja aja…
+search = Etsi…
 terminal = Tuloste
 exit = Sulje
 new = Uusi
-settings = Asetukset...
+settings = Asetukset…
 file = Tiedosto
 run = Aja
 edit = Muokkaa
@@ -14,7 +15,7 @@ copy = Kopioi
 paste = Sijoita
 new = uusi
 about = Tietoja
-aboutApp = Tietoja sovelluksesta...
+aboutApp = Tietoja sovelluksesta…
 cut = Leikkaa
 coder = Jussi Pohjolainen, 2020
 tab = Tab
